--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
     left: 2vw;
 }
 
-.signup{
+#signup{
     top: 11vh;
     padding: 15px; 
     width: 38vw;
@@ -42,18 +42,18 @@ body{
     border-radius: 20px;
     background-color: rgb(211, 168, 168);
 }
-.signup label{
+#signup label{
     font-size: 14px;
 }
-.signup p{
+#signup p{
     font-size: 14px;
-}.signup legend{
+}#signup legend{
     font-size: 40px;
     text-align: center;
     font-family: cute2;
     color: rgb(99, 46, 46);
 }
-.signup input{
+#signup input{
     border-radius: 5px;
     border: 1px solid rgb(87, 51, 51);
 }
@@ -105,12 +105,18 @@ input radio{
 }
 
 .box{
-    position: relative;
-    height: 20vh;
+    position: absolute;
+    height: 22vh;
     width: 35vw;
     left: 3.5vw;
     top: 54vh;
     border-radius: 5px;
     background-color: white;
     opacity: 70%;
+    padding: 10px;
+}
+
+#video1{
+    margin-left:30px ;
+
 }
