--- a/style2.css
+++ b/style2.css
@@ -26,7 +26,6 @@ h1{
     color: rgb(75, 31, 31);
     overflow: hidden;
     font-size: 40px;
-    position: relative;
     
 }
 
@@ -96,16 +95,32 @@ h1{
     text-decoration: none;
     margin-top: 50px;
    text-align: center;
-   color: black;
-   border: 2px solid black;
+   color: rgb(51, 36, 36);
+   border: 2px solid rgb(105, 77, 77);
    transition-duration: 500ms;   
-   box-shadow: black 5px 10px;
+   box-shadow: rgb(105, 72, 72) 5px 10px;
 }
 
 .highlight:hover{
-    background-color: black;  
+    background-color: rgb(145, 110, 110);  
     transition-duration: 500ms;   
     transform: scale(1.5);
     color: white;   
     box-shadow: white 5px 10px;
+}
+
+.text-box{
+    position: relative;
+    width: 50vw;
+    left: 32vw;
+}
+
+.section-title{
+    position: relative;
+    left: 32vw;
+    color: rgb(87, 46, 46);
+}
+
+h2{
+    color: rgb(184, 130, 130);
 }
